GNOME Bugzilla – Bug 699629
"Sort folders before files" clashes with ranking
Last modified: 2017-11-03 16:33:24 UTC
Steps to reproduce: Let there be a directory "~/test/foo/bar" and a file "~/test/bar" Enable "Sort folders before files" in the Preferences Go to directory ~/test, and perform a search for "bar". Actual result: The top result is the directory "~/test/foo/bar". Expected result: The top result should be the file "~/test/bar", because it's a result from the current directory. I think the preference "Sort folders before files" should be ignored on search results. Originally reported on https://bugzilla.gnome.org/show_bug.cgi?id=691978#c2
This was fixed by this merge commit 04ab4cbe0681c225d1ea2965bde8565ccfab90fa