files-view: Ignore "sort-directories-first" for search results

Search results are sorted by search relevance, which, among other 
parameters, ranks results from the current directory above results from 
subdirectories.

However, if sort-directories-first gsetting is TRUE, a directory found 
deeper in the hierarchy may be ranked above a file from the current 
directory. Also, as more directories are found, files keep moving down.

Therefore, we should not sort directories first when searching.

Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=699629